--- a/src/components/ShopItem/ShopItem.css
+++ b/src/components/ShopItem/ShopItem.css
@@ -1,47 +1,80 @@
-.item{
-    display: flex;
-    text-align: left;
-    padding-bottom: 5px;
-    border-bottom: 1px solid lightgray;
-}
-.item img{
-    margin-right: 10px;
-}
-.item-header{
-    text-align: left;
+.item {
+  display: flex;
+  border-bottom: 1px solid #ccc;
 }
 
-.item-header{
-    color:blue;
-    font-weight: 400;
+.item:last-child {
+  border-bottom: 0;
 }
 
-.item-description{
-    display: flex;
+.half-width-inline-box {
+  display: inline-block;
+  width: 50%;
 }
 
-.item-description > div{
-    width: 50%;
+.l-display-flex {
+  display: flex;
 }
 
-.item-description li{
-    font-size: 12px;
-    color: gray;
+.half-width {
+  width: 50%;
 }
 
-.ratings{
-    color:#ffbd00;
+.image-container {
+  padding: 10px;
 }
 
-button{
-    background-color:#f0c14b;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: #111;
-    width: 200px;
-    height: 26px;
-    border-style: solid;
-    border-width: 1px;
-    cursor: pointer;
-    border-radius: 3px;
-    vertical-align: middle;
+.item-details {
+  padding: 10px;
+}
+
+.ratings {
+  color: #ffbd00;
+}
+
+.l-margin-top {
+  margin-top: 16px;
+}
+
+.l-margin-bottom {
+  margin-bottom: 16px;
+}
+
+h2 {
+  margin: 10px 0;
+}
+
+.item-details ul {
+  padding: 0 0 0 20px;
+  list-style-type: disc;
+}
+
+button {
+  background-color: #f0c14b;
+  border-color: #a88734 #9c7e31 #846a29;
+  color: #111;
+  width: 200px;
+  height: 26px;
+  border-style: solid;
+  border-width: 1px;
+  cursor: pointer;
+  border-radius: 3px;
+  vertical-align: middle;
+}
+
+dl {
+  padding: 0 16px;
+}
+
+dl dt, dl dd {
+  display: inline-block;
+  margin: 0 0 8px 0;
+}
+
+dl dt {
+  width: 60%;
+}
+
+dl dd {
+  width: 40%;
 }
