--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,9 @@
+/*Start app style*/
 .App {
   text-align: center;
   background-color: #EBEBEB;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
 .App-intro {
   font-size: large;
 }
+/*End app style*/
