--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,13 @@
-
+/*Start header style*/
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
+/*End header style*/
 
+/* Start header menu style*/
 .Header .menu ul{
     list-style: none;
     height: 40px;
@@ -31,3 +33,4 @@
     color: #1b95e0;
     font-weight: 500;
 }
+/* End header menu style*/
